# HW5_RAG_Context_Window

./: .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_ASSESSMENT_REPORT.md  EXPERIMENT1_IMPROVEMENTS_SUMMARY.md  GRADING_CHECKLIST.md  HW5_Option_1_asiroli2025_Context_Windows_Lab.docx  HW5_Submission_Lior_Livyatan_209328608.docx  IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  README.md  README_COMPREHENSIVE.md  REQUIREMENTS.md  SCALED_EXPERIMENT_RESULTS.md  SELF_ASSESSMENT.md  WEAKER_MODEL_INSTRUCTIONS.md  create_hw5_submission_docx.py  pyproject.toml  run_coverage.sh  self_assesmentGUide.md  submission_guide.md  test_exp1_scaled.py  test_harder_exp1.py
.claude/: settings.local 2.json
.github/: CICD.md
.github/workflows/: tests.yml
PREV_HOMEWORK_REFERENCE/: HW4_Submission_Geo_Contextual_Media_Orchestrator.docx  create_submission_docx.py
config/: experiments.yaml  llm_config.yaml
data/: README.md
data/raw/hebrew_documents/: metadata.json  questions.json
data/raw/hebrew_documents/law/: consumer_protection.txt  contract_law.txt  corporate_law.txt  digital_rights.txt  employment_law.txt  intellectual_property.txt  privacy_law.txt
data/raw/hebrew_documents/medicine/: cardiology.txt  diabetes.txt  mental_health.txt  neurology.txt  pharmacology.txt  preventive_medicine.txt
data/raw/hebrew_documents/technology/: ai_machine_learning.txt  blockchain.txt  cloud_computing.txt  cybersecurity.txt  iot.txt  mobile_apps.txt  software_dev.txt
docs/: data_flow_explanation.md  document_generation_prompts.md  experiment_3_hebrew_documents.md  session_6_summary.md
docs/architecture/: c4_diagrams.md  deployment.md  uml_diagrams.md
docs/architecture/adrs/: 001-use-ollama.md  002-building-blocks-pattern.md  003-chromadb-for-vectors.md  004-multiprocessing-strategy.md
docs/test_coverage/: README.md
results/experiment_1/: results.json
results/experiment_1_baseline/: results.json
results/experiment_1_distractors/: results.json
results/experiment_1_scaled/: results.json
results/experiment_1_tinyllama/: results.json
results/experiment_2/: results.json
results/experiment_3/: results.json
results/experiment_4/: results.json
src/context_windows_lab/: __init__.py  cli.py
src/context_windows_lab/context_management/: __init__.py  scratchpad.py  summarizer.py
src/context_windows_lab/data_generation/: __init__.py  document_generator.py
src/context_windows_lab/evaluation/: __init__.py  accuracy_evaluator.py  metrics.py
src/context_windows_lab/experiments/: __init__.py  base_experiment.py  exp1_needle_haystack.py  exp2_context_size.py  exp3_rag_impact.py  exp4_context_strategies.py
src/context_windows_lab/llm/: __init__.py  ollama_interface.py
src/context_windows_lab/rag/: __init__.py  vector_store.py
src/context_windows_lab/visualization/: __init__.py  plotter.py
tests/: README.md  __init__.py
tests/test_context_management/: test_scratchpad.py  test_summarizer.py
tests/test_data_generation/: test_document_generator.py
tests/test_evaluation/: test_accuracy_evaluator.py  test_metrics.py
tests/test_experiments/: test_exp1_integration.py  test_exp2_integration.py  test_exp3_integration.py  test_exp4_integration.py
tests/test_llm/: test_ollama_interface.py
tests/test_rag/: test_vector_store.py
tests/test_visualization/: test_plotter.py
