[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-windows-lab"
version = "1.0.0"
description = "Experimental framework for investigating LLM context window behavior and management strategies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lior Livyatan", email = "lior@example.com"},
]
keywords = [
    "llm",
    "context-windows",
    "rag",
    "retrieval-augmented-generation",
    "ollama",
    "langchain",
    "experiments",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    # Core LLM & LangChain
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",

    # Vector Database & Embeddings
    "chromadb>=0.4.22",

    # Data Processing
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Token Counting
    "tiktoken>=0.5.0",

    # HTTP Client
    "httpx>=0.24.0",

    # Progress Bars
    "tqdm>=4.65.0",

    # Logging
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",

    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pylint>=2.17.0",

    # Type Stubs
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

jupyter = [
    # Jupyter Notebook
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",

    # Notebook-specific viz
    "plotly>=5.17.0",
]

all = [
    "context-windows-lab[dev,jupyter]",
]

[project.urls]
Homepage = "https://github.com/LiorLivyatan/HW5_RAG_Context_Window"
Repository = "https://github.com/LiorLivyatan/HW5_RAG_Context_Window"
Documentation = "https://github.com/LiorLivyatan/HW5_RAG_Context_Window/blob/main/README.md"
Issues = "https://github.com/LiorLivyatan/HW5_RAG_Context_Window/issues"

[project.scripts]
context-windows-lab = "context_windows_lab.cli:main"

[tool.setuptools]
packages = ["context_windows_lab"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
context_windows_lab = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=context_windows_lab",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "chromadb.*",
    "langchain.*",
    "langchain_community.*",
    "tiktoken.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]
